--- a/BunnyProject/package.json
+++ b/BunnyProject/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "@types/react-test-renderer": "^18.0.0",
     "axios": "^1.1.3",
     "chart.js": "^3.9.1",
     "react": "^18.2.0",
@@ -28,6 +29,7 @@
     "@vitejs/plugin-react": "^2.2.0",
     "babel-jest": "^29.3.0",
     "jest": "^29.3.0",
+    "react-test-renderer": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "vite": "^3.2.0"
