--- a/BunnyProject/package.json
+++ b/BunnyProject/package.json
@@ -6,7 +6,8 @@
     "dev": "vite --open",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "watch": "jest --watchAll --coverage"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
@@ -24,11 +25,14 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.2",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
     "babel-jest": "^29.3.0",
     "jest": "^29.3.0",
+    "jest-dom": "^4.0.0",
     "react-test-renderer": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
