--- a/BunnyProject/package.json
+++ b/BunnyProject/package.json
@@ -25,17 +25,33 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.2",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
     "babel-jest": "^29.3.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.0",
     "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^29.3.1",
     "react-test-renderer": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "vite": "^3.2.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest-setup.ts"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx,js,jsx}",
+      "!src/**/*.d.ts"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   }
 }
