--- a/BunnyProject/package.json
+++ b/BunnyProject/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.2",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
@@ -37,6 +38,7 @@
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^29.3.1",
     "react-test-renderer": "^18.2.0",
+    "setimmediate": "^1.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "vite": "^3.2.0"
